new pic new cinemas

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       <img class="logo" src="./img/logo.png" alt="#" role="presentation" />
       <div class="header_date">
         <p>
-          <span class="bold">Luty</span>
+          <span class="bold">Luty/Marzec</span>
           <span>2017</span>
         </p>
       </div>
@@ -66,7 +66,7 @@
       <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
-      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
     </div>
     <div class="item">
@@ -75,7 +75,7 @@
       <div class="movie_more_black"></div>
     </div>
     <div class="item">
-      <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
+      <img src="./img/movies/klatwa_spiacej_krolewny.jpg" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
       <div class="movie_more_black"></div>
     </div>
@@ -90,7 +90,7 @@
       <div class="movie_more_black"></div>
     </div>
     <div class="item">
-      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more">czytaj wiecej</div>
       <div class="movie_more_black"></div>
     </div>
@@ -157,7 +157,7 @@
         <!-- 1 -->
         <li class="one_shot_movie">
           <p class="name_movie bold">Bodom</p>
-          <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+          <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 2 -->
         <li class="one_shot_movie">
@@ -171,7 +171,7 @@
         <!-- 3 -->
         <li class="one_shot_movie">
           <p class="name_movie bold">Bodom</p>
-          <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+          <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 4 -->
         <li class="one_shot_movie">
@@ -189,7 +189,7 @@
             <br/>
             Królewny
           </p>
-          <img src="./img/movies/klatwa.png" class="shot_movie" role="presentation" alt="#" />
+          <img src="./img/movies/klatwa_spiacej_krolewny.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 6 -->
         <li class="one_shot_movie">
@@ -215,7 +215,7 @@
           185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
         </svg>
           <div class="pop_up_left">
-            <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
+            <img src="img/movies/bodom.jpg" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
               <a href="" class="pop_up_view" id="open_pop_up_video">zobacz zwiastun</a>
             </div>
@@ -323,32 +323,36 @@
         <p class="bold">Kina</p>
       </div>
       <div class="cinema_city">
-        <p class="red bold">Warszawa</p>
+        <p class="red bold">Katowice</p>
         <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema City</p>
-          <p class="cinema_shot_date">11/12/2017</p>
+          <p class="cinema_shot_name">Kino Mikro</p>
+          <p class="cinema_shot_date">13-19/02/2017</p>
           <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
         </div>
         <div class="separator"></div>
         <div class="cinema_shot">
-          <p class="cinema_shot_name">Multikino</p>
-          <p class="cinema_shot_date">11/12/2017</p>
+          <p class="cinema_shot_name">Kino Mikro - Galeria Bronowice</p>
+          <p class="cinema_shot_date">13-19/02/2017</p>
           <img class="cinema_shot_img" src="./img/other/multikino.png" alt="#" role="presentation" />
         </div>
       </div>
       <div class="cinema_city">
-        <p class="red bold">Katowice</p>
+        <p class="red bold">Nowy Sącz</p>
         <div class="cinema_shot">
-          <p class="cinema_shot_name">Cinema City</p>
-          <p class="cinema_shot_date">11/12/2017</p>
+          <p class="cinema_shot_name">Kino Sokoł</p>
+          <p class="cinema_shot_date">10-11/02/2017(maraton) 28-29/02/2017(maraton)</p>
           <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
         </div>
         <div class="separator"></div>
+      </div>
+      <div class="cinema_city">
+        <p class="red bold">Wadowice</p>
         <div class="cinema_shot">
-          <p class="cinema_shot_name">Multikino</p>
-          <p class="cinema_shot_date">11/12/2017</p>
-          <img class="cinema_shot_img" src="./img/other/multikino.png" alt="#" role="presentation" />
+          <p class="cinema_shot_name">Wadowickie Centrum Kultury</p>
+          <p class="cinema_shot_date">02-10/02/2017</p>
+          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
         </div>
+        <div class="separator"></div>
       </div>
     </div>
   </section>
