add bodom popup

--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     </div>
     <div class="item">
       <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
-      <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more" data-popup-movie="bodom">czytaj wiecej</div>
     </div>
     <div class="item">
       <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
@@ -155,7 +155,7 @@
       </div>
       <ul class="grid_movie">
         <!-- 1 -->
-        <li class="one_shot_movie">
+        <li class="one_shot_movie" data-popup-open="bodom">
           <p class="name_movie bold">Bodom</p>
           <img src="./img/movies/bodom.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
@@ -207,7 +207,8 @@
           </p>
           <img src="./img/movies/side.png" class="shot_movie" role="presentation" alt="#" />
         </li>
-        <div class="pop_up">
+        <!-- Bodom -->
+        <div class="pop_up" data-popup="bodom">
         <div class="container">
           <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
            viewBox="0 0 371.23 371.23" style="enable-background:new 0 0 371.23 371.23;" xml:space="preserve">
@@ -256,33 +257,72 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul id="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/other/bodom_skin.png 375, ./img/other/bodom_skin.png 480, ./img/other/bodom_skin.png 800" data-src="./img/other/bodom_skin.png">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_01.jpg 375, ./img/gallery/bodom/Bodom_01.jpg 480, ./img/gallery/bodom/Bodom_01.jpg 800" data-src="./img/gallery/bodom/Bodom_01.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/other/bodom_skin.png" />
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_01.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <li class="movie_skin_one" data-responsive="./img/other/bodom_skin.png 375, ./img/other/bodom_skin.png 480, ./img/other/bodom_skin.png 800" data-src="./img/other/bodom_skin.png">
+                  <!-- Bodom 2 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_02.jpg 375, ./img/gallery/bodom/Bodom_02.jpg 480, ./img/gallery/bodom/Bodom_02.jpg 800" data-src="./img/gallery/bodom/Bodom_02.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/other/bodom_skin.png" />
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_02.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <li class="movie_skin_one" data-responsive="./img/other/bodom_skin.png 375, ./img/other/bodom_skin.png 480, ./img/other/bodom_skin.png 800" data-src="./img/other/bodom_skin.png">
+                  <!-- Bodom 3 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_03.jpg 375, ./img/gallery/bodom/Bodom_03.jpg 480, ./img/gallery/bodom/Bodom_03.jpg 800" data-src="./img/gallery/bodom/Bodom_03.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/other/bodom_skin.png" />
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_03.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <li class="movie_skin_one" data-responsive="./img/other/bodom_skin.png 375, ./img/other/bodom_skin.png 480, ./img/other/bodom_skin.png 800" data-src="./img/other/bodom_skin.png">
+                  <!-- Bodom 4 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_04.jpg 375, ./img/gallery/bodom/Bodom_04.jpg 480, ./img/gallery/bodom/Bodom_04.jpg 800" data-src="./img/gallery/bodom/Bodom_04.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/other/bodom_skin.png" />
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_04.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Bodom 5 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_05.jpg 375, ./img/gallery/bodom/Bodom_05.jpg 480, ./img/gallery/bodom/Bodom_05.jpg 800" data-src="./img/gallery/bodom/Bodom_05.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_05.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Bodom 6 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_06.jpg 375, ./img/gallery/bodom/Bodom_06.jpg 480, ./img/gallery/bodom/Bodom_06.jpg 800" data-src="./img/gallery/bodom/Bodom_06.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_06.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Bodom 7 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_07.jpg 375, ./img/gallery/bodom/Bodom_07.jpg 480, ./img/gallery/bodom/Bodom_07.jpg 800" data-src="./img/gallery/bodom/Bodom_07.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_07.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- Bodom 8 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_09.jpg 375, ./img/gallery/bodom/Bodom_09.jpg 480, ./img/gallery/bodom/Bodom_09.jpg 800" data-src="./img/gallery/bodom/Bodom_09.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_09.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
@@ -290,9 +330,6 @@
                   </li>
                 </ul>
               </div>
-              <!--<div data-responsive="./img/other/bodom_skin.png" data-src="./img/other/bodom_skin.png" class="movie_skin_one"></div>
-              <div data-responsive="./img/other/bodom_skin.png" data-src="./img/other/bodom_skin.png" class="movie_skin_one"></div>
-              <div data-responsive="./img/other/bodom_skin.png" data-src="./img/other/bodom_skin.png" class="movie_skin_one"></div>-->
             </div>
           </div>
         </div>
