--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     </div>
     <div class="item">
       <img src="./img/movies/klatwa_spiacej_krolewny.jpg" class="shot_movie" role="presentation" alt="#" />
-      <div class="movie_more">czytaj wiecej</div>
+      <div class="movie_more" data-popup-movie="ksk">czytaj wiecej</div>
       <div class="movie_more_black"></div>
     </div>
     <div class="item">
@@ -183,7 +183,7 @@
           <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 5 -->
-        <li class="one_shot_movie">
+        <li class="one_shot_movie" data-popup-open="ksk">
           <p class="name_movie bold">
             Klątwa Śpiącej
             <br/>
@@ -218,7 +218,7 @@
           <div class="pop_up_left">
             <img src="img/movies/bodom.jpg" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
-              <a href="" class="pop_up_view" id="open_pop_up_video">zobacz zwiastun</a>
+              <a href="" class="pop_up_view" class="open_pop_up_video">zobacz zwiastun</a>
             </div>
           </div>
           <div class="pop_up_right">
@@ -256,7 +256,7 @@
             </p>
             <div class="movie_skin cont">
               <div class="demo-gallery">
-                <ul id="lightgallery">
+                <ul class="lightgallery">
                   <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_01.jpg 375, ./img/gallery/bodom/Bodom_01.jpg 480, ./img/gallery/bodom/Bodom_01.jpg 800" data-src="./img/gallery/bodom/Bodom_01.jpg">
                     <a href="">
                       <img class="img-responsive" src="./img/gallery/bodom/Bodom_01.jpg" />
@@ -334,6 +334,135 @@
           </div>
         </div>
       </div>
+        <!-- End Bodom -->
+        <!-- KSk -->
+        <div class="pop_up" data-popup="ksk">
+        <div class="container">
+          <svg class="movie_cross" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           viewBox="0 0 371.23 371.23" style="enable-background:new 0 0 371.23 371.23;" xml:space="preserve">
+        <polygon points="371.23,21.213 350.018,0 185.615,164.402 21.213,0 0,21.213 164.402,185.615 0,350.018 21.213,371.23
+          185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
+        </svg>
+          <div class="pop_up_left">
+            <img src="img/movies/klatwa.png" class="pop_up_image" alt="#" role="presentation" />
+            <div class="pop_up_buttons">
+              <a href="" class="pop_up_view" class="open_pop_up_video">zobacz zwiastun</a>
+            </div>
+          </div>
+          <div class="pop_up_right">
+            <p class="movie_name_point bold red">Bodom</p>
+            <p class="movie_description"><span class="white_sepo">Finlandia, Estonia 2016 </span><span class="white_sepo">85 min </span><span class="white_sepo">horror </span><span class="white_sepo">reż: Taneli Mustonen </span></p>
+            <p class="movie_name">
+              <span class="movie_obsada bold">Obsada:</span>
+              <span class="white_sepo">Nelly Hirst-Gee</span>
+              <span class="white_sepo">Santeri Helinheimo Mäntylä</span>
+              <span class="white_sepo">Mimosa Willamo</span>
+              <span class="white_sepo">Mimosa Gabriel</span>
+            </p>
+            <p class="movie_short red bold">
+              Brutalny fiński horror inspirowany prawdziwą masakrą nad jeziorem Bodom z 1960 roku, która wstrząsnęła całym krajem i do dziś budzi gorące emocje. Reżyser filmu, Taneli Mustonen, znalazł się na liście 10 najbardziej utalentowanych młodych filmowców ze Skandynawii,
+              przygotowanej przez prestiżowy magazyn Variety.
+            </p>
+            <p class="movie_short">
+              Latem 1960 roku czworo obozujących nad jeziorem nastolatków zostaje brutalnie zaatakowanych nożem podczas snu. Masakrę przeżywa tylko jedno z nich, jednakże nic nie pamięta z koszmarnej nocy, a sam morderca nie zostaje zidentyfikowany ani ujęty. Legendy głoszą, że do dziś ukrywa się w pobliskich lasach. Pół wieku później obozowisko nad jeziorem Bodom odwiedza grupa młodych śmiałków z nadzieją na dobrą zabawę i rozwiązanie tajemniczej sprawy poprzez szczegółowe odtworzenie okrutnego morderstwa. Gdy zapada noc, okazuje się jednak, że nie wszyscy przybyli tu z czystymi intencjami. Stawką w pełnej zaskakujących zwrotów akcji śmiertelnej grze będzie
+              ich życie.
+            </p>
+            <p class="movie_name bold">
+              Media o filmie
+            </p>
+            <p class="movie_press">
+              „Znakomity fiński slasher” –
+              <span class="red bold">The Hollywood Reporter</span>
+            </p>
+            <p class="movie_press">
+              “Inteligentny” –
+              <span class="red bold">Screendaily</span>
+            </p>
+            <p class="movie_press">
+              “Zaskakujący”  –
+              <span class="red bold">Horrorfreaknews</span>
+            </p>
+            <div class="movie_skin cont">
+              <div class="demo-gallery">
+                <ul class="lightgallery">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_2.jpg 375, ./img/gallery/ksk/curse_2.jpg 480, ./img/gallery/ksk/curse_2.jpg 800" data-src="./img/gallery/ksk/curse_2.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_2.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 2 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_3.jpg 375, ./img/gallery/ksk/curse_3.jpg 480, ./img/gallery/ksk/curse_3.jpg 800" data-src="./img/gallery/ksk/curse_3.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_3.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 3 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_4.jpg 375, ./img/gallery/ksk/curse_4.jpg 480, ./img/gallery/ksk/curse_4.jpg 800" data-src="./img/gallery/ksk/curse_4.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_4.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 4 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_5 375, ./img/gallery/ksk/curse_5.jpg 480, ./img/gallery/ksk/curse_5.jpg 800" data-src="./img/gallery/ksk/curse_5.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_5.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ks 5 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_6.jpeg 375, ./img/gallery/ksk/curse_6.jpeg 480, ./img/gallery/ksk/curse_6.jpeg 800" data-src="./img/gallery/ksk/curse_6.jpeg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_6.jpeg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 6 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_7.jpg 375, ./img/gallery/ksk/curse_7.jpg 480, ./img/gallery/ksk/curse_7.jpg 800" data-src="./img/gallery/ksk/curse_7.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_7.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 7 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_8.jpg 375, ./img/gallery/ksk/curse_8.jpg 480, ./img/gallery/ksk/curse_8.jpg 800" data-src="./img/gallery/ksk/curse_8.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_8.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                  <!-- ksk 8 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_9.jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/ksk/curse_9.jpg 800" data-src="./img/gallery/ksk/curse_9.jpg">
+                    <a href="">
+                      <img class="img-responsive" src="./img/gallery/ksk/curse_9.jpg" />
+                      <div class="demo-gallery-poster">
+                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- End KSK -->
         <!-- YouTube -->
         <section id="pop_up_video" class="pop_up_video">
           <div>
@@ -360,17 +489,17 @@
         <p class="bold">Kina</p>
       </div>
       <div class="cinema_city">
-        <p class="red bold">Katowice</p>
+        <p class="red bold">Kraków</p>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Mikro</p>
           <p class="cinema_shot_date">13-19/02/2017</p>
-          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
         </div>
         <div class="separator"></div>
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Mikro - Galeria Bronowice</p>
           <p class="cinema_shot_date">13-19/02/2017</p>
-          <img class="cinema_shot_img" src="./img/other/multikino.png" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/cinemas/kino_mikro.png" alt="Kino Mikro" role="presentation" />
         </div>
       </div>
       <div class="cinema_city">
@@ -378,7 +507,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Kino Sokoł</p>
           <p class="cinema_shot_date">10-11/02/2017(maraton) 28-29/02/2017(maraton)</p>
-          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/cinemas/nav_kino_sokol.png" alt="Kino Sokol" role="presentation" />
         </div>
         <div class="separator"></div>
       </div>
@@ -387,7 +516,7 @@
         <div class="cinema_shot">
           <p class="cinema_shot_name">Wadowickie Centrum Kultury</p>
           <p class="cinema_shot_date">02-10/02/2017</p>
-          <img class="cinema_shot_img cc" src="./img/other/cinemacity.png" alt="#" role="presentation" />
+          <img class="cinema_shot_img" src="./img/cinemas/logo-WCK-site.png" alt="Wadowickie Centrum Kultury" role="presentation" />
         </div>
         <div class="separator"></div>
       </div>
