--- a/public/index.html
+++ b/public/index.html
@@ -346,7 +346,7 @@
           <div class="pop_up_left">
             <img src="img/movies/klatwa.png" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
-              <a href="" class="pop_up_view" class="open_pop_up_video">zobacz zwiastun</a>
+              <a href="" class="pop_up_view open_pop_up_video">zobacz zwiastun</a>
             </div>
           </div>
           <div class="pop_up_right">
