--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
         <div class="about_fest_text">
           <p>
             <span class="red bold">FEST MAKABRA</span>
-            to nowy, ogólnopolski przegląd filmowy, prezentujący zagraniczne filmy z pogranicza horroru, thrillera, mrocznego fantasy i czarnej komedii. Większość filmów z programu zostanie wyświetlona w Polsce premierowo i będzie to jedyna okazja do obejrzenia ich na wielkim ekranie. Pierwsza edycja przeglądu filmowego FEST MAKABRA odbędzie się w kinach studyjnych i niezależnych w całej Polsce w lutym 2017 roku.
+            to nowy, ogólnopolski przegląd filmowy, prezentujący zagraniczne filmy z pogranicza horroru, thrillera, mrocznego fantasy i czarnej komedii. Większość filmów z programu zostanie wyświetlona w Polsce premierowo i będzie to jedyna okazja do obejrzenia ich na wielkim ekranie. Pierwsza edycja przeglądu filmowego FEST MAKABRA odbędzie się w kinach studyjnych i niezależnych w całej Polsce w lutym i marcu 2017 roku.
             Organizatorem wydarzenia jest dystrybutor filmów Kino Świat.
           </p>
           <p>
@@ -633,72 +633,45 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul class="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_2.jpg 375, ./img/gallery/ksk/curse_2.jpg 480, ./img/gallery/ksk/curse_2.jpg 800" data-src="./img/gallery/ksk/curse_2.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/atak/donaty1.jpg 375, ./img/gallery/atak/donaty1.jpg 480, ./img/gallery/atak/donaty1.jpg 800" data-src="./img/gallery/atak/donaty1.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_2.jpg" />
+                      <img class="img-responsive" src="./img/gallery/atak/donaty1.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 2 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_3.jpg 375, ./img/gallery/ksk/curse_3.jpg 480, ./img/gallery/ksk/curse_3.jpg 800" data-src="./img/gallery/ksk/curse_3.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/atak/donaty2.jpg 375, ./img/gallery/atak/donaty2.jpg 480, ./img/gallery/atak/donaty2.jpg 800" data-src="./img/gallery/atak/donaty2.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_3.jpg" />
+                      <img class="img-responsive" src="./img/gallery/atak/donaty2.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 3 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_4.jpg 375, ./img/gallery/ksk/curse_4.jpg 480, ./img/gallery/ksk/curse_4.jpg 800" data-src="./img/gallery/ksk/curse_4.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/atak/donaty3.jpg 375, ./img/gallery/atak/donaty3.jpg 480, ./img/gallery/atak/donaty3.jpg 800" data-src="./img/gallery/atak/donaty3.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_4.jpg" />
+                      <img class="img-responsive" src="./img/gallery/atak/donaty3.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 4 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_5 375, ./img/gallery/ksk/curse_5.jpg 480, ./img/gallery/ksk/curse_5.jpg 800" data-src="./img/gallery/ksk/curse_5.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/atak/donaty4.jpg 375, ./img/gallery/atak/donaty4.jpg 480, ./img/gallery/atak/donaty4.jpg 800" data-src="./img/gallery/atak/donaty4.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_5.jpg" />
+                      <img class="img-responsive" src="./img/gallery/atak/donaty4.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 5 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_6.jpeg 375, ./img/gallery/ksk/curse_6.jpeg 480, ./img/gallery/ksk/curse_6.jpeg 800" data-src="./img/gallery/ksk/curse_6.jpeg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/atak/donaty4.jpg 375, ./img/gallery/atak/donaty4.jpg 480, ./img/gallery/atak/donaty5.jpg 800" data-src="./img/gallery/atak/donaty5.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_6.jpeg" />
-                      <div class="demo-gallery-poster">
-                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
-                      </div>
-                    </a>
-                  </li>
-                  <!-- Atak 6 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_7.jpg 375, ./img/gallery/ksk/curse_7.jpg 480, ./img/gallery/ksk/curse_7.jpg 800" data-src="./img/gallery/ksk/curse_7.jpg">
-                    <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_7.jpg" />
-                      <div class="demo-gallery-poster">
-                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
-                      </div>
-                    </a>
-                  </li>
-                  <!-- Atak 7 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_8.jpg 375, ./img/gallery/ksk/curse_8.jpg 480, ./img/gallery/ksk/curse_8.jpg 800" data-src="./img/gallery/ksk/curse_8.jpg">
-                    <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_8.jpg" />
-                      <div class="demo-gallery-poster">
-                        <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
-                      </div>
-                    </a>
-                  </li>
-                  <!-- Atak 8 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_9.jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/ksk/curse_9.jpg 800" data-src="./img/gallery/ksk/curse_9.jpg">
-                    <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_9.jpg" />
+                      <img class="img-responsive" src="./img/gallery/atak/donaty5.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
@@ -773,72 +746,72 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul class="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_2.jpg 375, ./img/gallery/ksk/curse_2.jpg 480, ./img/gallery/ksk/curse_2.jpg 800" data-src="./img/gallery/ksk/curse_2.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora1.jpg 375, ./img/gallery/gora/gora1.jpg 480, ./img/gallery/gora/gora1.jpg 800" data-src="./img/gallery/gora/gora1.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_2.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora1.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 2 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_3.jpg 375, ./img/gallery/ksk/curse_3.jpg 480, ./img/gallery/ksk/curse_3.jpg 800" data-src="./img/gallery/ksk/curse_3.jpg">
+                  <!-- Gora 2 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora2.jpg 375, ./img/gallery/gora/gora2.jpg 480, ./img/gallery/gora/gora2.jpg 800" data-src="./img/gallery/gora/gora2.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_3.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora2.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 3 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_4.jpg 375, ./img/gallery/ksk/curse_4.jpg 480, ./img/gallery/ksk/curse_4.jpg 800" data-src="./img/gallery/ksk/curse_4.jpg">
+                  <!-- Gora 3 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora3.jpg 375, ./img/gallery/gora/gora3.jpg 480, ./img/gallery/gora/gora3.jpg 800" data-src="./img/gallery/gora/gora3.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_4.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora3.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 4 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_5 375, ./img/gallery/ksk/curse_5.jpg 480, ./img/gallery/ksk/curse_5.jpg 800" data-src="./img/gallery/ksk/curse_5.jpg">
+                  <!-- Gora 4 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora4 375, ./img/gallery/gora/gora4.jpg 480, ./img/gallery/gora/gora4.jpg 800" data-src="./img/gallery/gora/gora4.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_5.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora4.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 5 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_6.jpeg 375, ./img/gallery/ksk/curse_6.jpeg 480, ./img/gallery/ksk/curse_6.jpeg 800" data-src="./img/gallery/ksk/curse_6.jpeg">
+                  <!-- Gora 5 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora5.jpg 375, ./img/gallery/gora/gora5.jpg 480, ./img/gallery/gora/gora5.jpg 800" data-src="./img/gallery/gora/gora5.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_6.jpeg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora5.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 6 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_7.jpg 375, ./img/gallery/ksk/curse_7.jpg 480, ./img/gallery/ksk/curse_7.jpg 800" data-src="./img/gallery/ksk/curse_7.jpg">
+                  <!-- Gora 6 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora6.jpg 375, ./img/gallery/gora/gora6.jpg 480, ./img/gallery/gora/gora6.jpg 800" data-src="./img/gallery/gora/gora6.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_7.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora6.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 7 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_8.jpg 375, ./img/gallery/ksk/curse_8.jpg 480, ./img/gallery/ksk/curse_8.jpg 800" data-src="./img/gallery/ksk/curse_8.jpg">
+                  <!-- Gora 7 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora7.jpg 375, ./img/gallery/gora/gora7.jpg 480, ./img/gallery/gora/gora7.jpg 800" data-src="./img/gallery/gora/gora7.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_8.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora7.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
-                  <!-- Atak 8 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_9.jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/ksk/curse_9.jpg 800" data-src="./img/gallery/ksk/curse_9.jpg">
+                  <!-- Gora 8 -->
+                  <li class="movie_skin_one" data-responsive="./img/gallery/gora/gora8.jpg 375, ./img/gallery8.jpg 480, ./img/gallery/gora/gora8.jpg 800" data-src="./img/gallery/gora/gora8.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_9.jpg" />
+                      <img class="img-responsive" src="./img/gallery/gora/gora8.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
